@@ -3,6 +3,7 @@ package npg_pipeline::function::start_stop;
 use Moose;
 use namespace::autoclean;
 use Readonly;
+use Math::Random::Secure qw(irand);
 
 use npg_pipeline::function::definition;
 use npg_pipeline::runfolder_scaffold;
@@ -97,10 +98,14 @@ sub pipeline_wait4path {
 
   my $path = npg_pipeline::runfolder_scaffold
              ->path_in_outgoing($self->runfolder_path());
+  my $random = irand(); # Will add echoing this random number to the
+                        # command so that commands for different invocations
+                        # of the pipeline on the same run are not considered
+                        # the same by wr.
 
   my $command = q{bash -c '}
   ##no critic (ValuesAndExpressions::RequireInterpolationOfMetachars)
-    . qq{COUNTER=0; NUM_ITERATIONS=$NUM_MINS2WAIT; DIR=$path; STIME=60; }
+    . qq{echo $random; COUNTER=0; NUM_ITERATIONS=$NUM_MINS2WAIT; DIR=$path; STIME=60; }
     .  q{while [ $COUNTER -lt $NUM_ITERATIONS ] && ! [ -d $DIR ] ; }
     .  q{do echo $DIR not available; COUNTER=$(($COUNTER+1)); sleep $STIME; done; }
     .  q{EXIT_CODE=0; if [ $COUNTER == $NUM_ITERATIONS ] ; then EXIT_CODE=1; fi; exit $EXIT_CODE;}
@@ -140,6 +145,8 @@ __END__
 =item Moose
 
 =item namespace::autoclean
+
+=item Math::Random::Secure
 
 =back
 
